--- a/index.html
+++ b/index.html
@@ -110,20 +110,131 @@
             </ul>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <h2>Promoções</h2>
+            <ul class="container-flex lista-veiculos">
+                <li>
+                    <img src="./images/carro-bmw.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automatico, 4 portas, vidro e trava.
+                    </p>
+                   <div class="price">
+                    <del>R$ 100.000,00</del>
+                    <strong>
+                       R$ 75.000,00
+                    </strong>
+                   </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li class="item-central">
+                    <img src="./images/moto-bmw.png" alt="">
+                        <h3>Carro BMW</h3>
+                        <p>
+                            Câmbio automatico, 4 portas, vidro e trava.
+                        </p>
+                   <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>
+                            R$ 75.000,00
+                        </strong>
+                   </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="./images/fusca.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automatico, 4 portas, vidro e trava.
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>
+                            R$ 75.000,00
+                        </strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li>
+                    <img src="./images/fusca.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automatico, 4 portas, vidro e trava.
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>
+                            R$ 75.000,00
+                        </strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+                <li  class="item-central">
+                    <img src="./images/fusca.png" alt="">
+                    <h3>Carro BMW</h3>
+                    <p>
+                        Câmbio automatico, 4 portas, vidro e trava.
+                    </p>
+                    <div class="price">
+                        <del>R$ 100.000,00</del>
+                        <strong>
+                            R$ 75.000,00
+                        </strong>
+                    </div>
+                    <button type="button">Tenho interesse</button>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h2>Entre em contato</h2>
+            <form>
+                <div class="form-campo">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome">
+                </div>
+                <div class="form-campo">
+                    <label for="phone">Telefone:</label>
+                    <input type="tel" id="phone" name="telefone">
+                </div>
+                <div class="form-campo">
+                    <label for="mail">E-mail:</label>
+                    <input type="email" id="mail" name="email">
+                </div>
+                <div class="form-campo">
+                    <label for="car-buy">Veículo de interesse:</label>
+                    <input type="car-buy" id="car-buy" name="carbuy">
+                </div>
+                <div class="form-campo">
+                    <label for="message">Mensagem:</label>
+                    <textarea id="message" name="mensagem"></textarea>
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>2024&copy; MareaTurbo Todos os direitos reservados</p>
+            <ul>
+                <li><a href=""><img src="./icones/facebook.png" alt=""></a></li>
+                <li><a href=""><img src="./icones/instagram.png" alt=""></a></li>
+                <li><a href=""><img src="./icones/youtube.png" alt=""></a></li>
+            </ul>
+        </div>
+    </footer>
+
+
+
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
     <script src="./script.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('#carrousel-images').slick({
-                autoplay:true
-            });
-            $('.menu-hamburguer').click(function(){
-                $('nav').slideToggle();
-            })
-        })
-    </script>
 </body>
-
 </html>
